--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-compatible" content="ie=Edge">
-        <title>Untitled</title>
+        <title>Device - home</title>
         <link rel="stylesheet" href="style.css">
         <script src="script.js" defer></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -48,7 +48,7 @@
                 <div class="box1 dot"></div>
                 <div class="loginbox">
                     <div class="title">
-                        <p class="gametitle"><span class="font-bad">Game Title</span></p><br>
+                        <p class="gametitle"><span class="font-bad">Device</span></p><br>
                         <p class="welcome"><span class="font-grand">Welcom</span></p>
                     </div>
                     <div class="kakapo"><img src="images/home/kakapo.gif" alt="" width="120px"></div>
