--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <form name="myGameSite">
             <div class="hamburger_items" id="js-items">
                 <ul>
-                    <li>メニュー1</li>
+                    <li><a href="gamepage/index.html">メニュー1</a></li>
                     <li>メニュー2</li>
                     <li>メニュー3</li>
                 </ul>
@@ -30,6 +30,14 @@
                 <div class="circle" id="circle2"></div>
                 <div class="circle" id="circle3"></div>
                 <div class="circle" id="circle4"></div>
+                <div class="" id="circle5">
+                    <div class="" id="circle5-1"></div>
+                    <div class="" id="circle5-2"></div>
+                    <div class="" id="circle5-3"></div>
+                    <div class="" id="circle5-4"></div>
+                    <div class="" id="circle5-5"></div>
+                    <div class="" id="circle5-6"></div>
+                </div>
                 <div class="line1">
                     <div class="block">
                         <span></span>
