--- a/gamepage/index.html
+++ b/gamepage/index.html
@@ -12,7 +12,7 @@
     <body>
         <div class="hamburger_items" id="js-items">
             <ul>
-                <li><a href="../../Ver_3/index.html">ホーム</a></li>
+                <li><a href="../index.html">ホーム</a></li>
                 <li><a href="index.html">ステージ選択</a></li>
                 <li><a href="../introduction/index.html">紹介</a></li>
             </ul>
@@ -62,4 +62,5 @@
             </div>
         </div>
     </body>
+
 </html>
