--- a/index.html
+++ b/index.html
@@ -28,14 +28,15 @@
             
             <div class="" id="circle5">
                 <div class="planet" id="star"></div>
-                <img class="planet" id="planet_1" src="images/Planetary_system/small_4.png" alt="" width="200" height="200">
-                <img class="planet" id="planet_2" src="images/Planetary_system/big_2.png" alt="" width="300" height="300">
-                <img class="planet" id="planet_3" src="images/Planetary_system/big_3.png" alt="" width="600" height="600">
-                <img class="planet" id="planet_4" src="images/Planetary_system/big_1.png" alt="" width="1000" height="1000">
-                <img class="planet" id="planet_5" src="images/Planetary_system/big_4.png" alt="" width="1200" height="1200">
-                <img class="planet" id="planet_6" src="images/Planetary_system/small_2.png" alt="" width="1300" height="1300">
+                <img class="planet" id="planet_1" src="images/Planetary_system/small_4.png" alt="">
+                <img class="planet" id="planet_2" src="images/Planetary_system/big_2.png" alt="">
+                <img class="planet" id="planet_3" src="images/Planetary_system/big_3.png" alt="">
+                <img class="planet" id="planet_4" src="images/Planetary_system/big_1.png" alt="">
+                <img class="planet" id="planet_5" src="images/Planetary_system/big_4.png" alt="">
+                <img class="planet" id="planet_6" src="images/Planetary_system/small_2.png" alt="">
             </div>
             <main class="container" id="js-container">
+                <div class="box1 dot"></div>
                 <div class="circle" id="circle1"></div>
                 <div class="circle" id="circle2"></div>
                 <div class="circle" id="circle3"></div>
@@ -55,7 +56,6 @@
                         <span></span>
                     </div>
                 </div>
-                <div class="box1 dot"></div>
                 <div class="loginbox">
                     <div class="title">
                         <p class="gametitle"><span class="font-bad">Device</span></p><br>
