--- a/index.html
+++ b/index.html
@@ -58,20 +58,20 @@
                 </div>
                 <div class="loginbox">
                     <div class="title">
-                        <p class="gametitle"><span class="font-bad">Device</span></p><br>
-                        <p class="welcome"><span class="font-grand">Welcom</span></p>
+                        <p class="gametitle">Device</p><br>
+                        <p class="welcome">Welcome</p>
                     </div>
                     <div class="kakapo"><img src="images/home/kakapo.gif" alt="" width="120px"></div>
                     <div class="prompt">
                         <button type="button" class="upload_button" onclick="uploadSaveData()">
-                            <p class="upload_button_text"><span class="font-bad">セーブデータをアップロード．．．</span></p>
+                            <p>セーブデータをアップロード．．．</p>
                             <img src="images/home/upload.png">
                         </button>
                         <div class="newUserBox">
-                            <p class="newUserBox_text"><span class="font-bad">新しくセーブデータを作成する．．．</span></p>
+                            <p>新しくセーブデータを作成する．．．</p>
                             <input type="text" name="userName" id="newName" placeholder="ユーザー名（半角10文字以内）"><br>
                             <button type="button" class="done_button" onclick="doneNewName()">
-                                <p class="done_button_text"><span class="font-bad">決定→</span></p>
+                                <p>決定→</p>
                             </button>
                         </div>
                     </div>
