--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </head>
     <body>
-        <div id="dropArea"></div>
+        <div id="dropArea" ontouchstart=""></div>
         <form name="myGameSite">
             <div class="hamburger_items" id="js-items">
                 <ul>
@@ -80,3 +80,4 @@
         </form>
     </body>
 </html>
+
