--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <script src="script.js" defer></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </head>
-    <body>
+    <body oncontextmenu="return false;">
         <div id="dropArea" ontouchstart=""></div>
         <form name="myGameSite">
             <div class="hamburger_items" id="js-items">
@@ -80,4 +80,5 @@
         </form>
     </body>
 </html>
+
 
