--- a/gamepage/index.html
+++ b/gamepage/index.html
@@ -10,57 +10,101 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </head>
     <body>
-        <div class="hamburger_items" id="js-items">
-            <ul>
-                <li><a href="../index.html">ホーム</a></li>
-                <li><a href="index.html">ステージ選択</a></li>
-                <li><a href="../introduction/index.html">紹介</a></li>
-            </ul>
-        </div>
-        <div class="hamburger_button" id="js-hamburger">
-            <span></span>
-            <span></span>
-            <span></span>
-            <div class="TextMask"><div class="text">M E N U</div></div>
-        </div>
-        <div class="content">
-            <div class="stage" id="stage_1">
-                <a href="stages\1\index.html"></a>
-                <div class="thumbnail"></div>
+        <form name="myGameSite">
+            <div class="hamburger_items" id="js-items">
+                <ul>
+                    <li><a href="../index.html">ホーム</a></li>
+                    <li><a href="index.html">ステージ選択</a></li>
+                    <li><a href="../introduction/index.html">紹介</a></li>
+                </ul>
             </div>
-            <div class="stage" id="stage_2">
-                <a href="stages\2\index.html"></a>
-                <div class="thumbnail"></div>
+            <div class="hamburger_button" id="js-hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+                <div class="TextMask"><div class="text">M E N U</div></div>
             </div>
-            <div class="stage" id="stage_3">
-                <a href="stages\3\index.html"></a>
-                <div class="thumbnail"></div>
+            
+            <main class="container" id="js-container">
+                <div class="lev1" id="levels">
+                    <p>Leve1</p>
+                    <ul>
+                        <li>
+                            <p id="st1-1">Stage_1_1</p>
+                            <div class="stage" id="stage_1">
+                                <a href="stages\1\index.html"></a>
+                                <div class="thumbnail"></div>
+                            </div>
+                        </li>
+                        <li>
+                            <p id="st1-2">Stage_1_2</p>
+                            <div class="stage" id="stage_2">
+                                <a href="stages\2\index.html"></a>
+                                <div class="thumbnail"></div>
+                            </div>
+                        </li>
+                        <li>
+                            <p id="st1-3">Stage_1_3</p>
+                            <div class="stage" id="stage_3">
+                                <a href="stages\3\index.html"></a>
+                                <div class="thumbnail"></div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="lev2" id="levels">
+                    <p>Leve2</p>
+                    <ul>
+                        <li>
+                            <p id="st2-1">Stage_2_1</p>
+                            <div class="stage" id="stage_4">
+                                <a href="stages\4\index.html"></a>
+                                <div class="thumbnail"></div>
+                            </div>
+                        </li>
+                        <li>
+                            <p id="st2-2">Stage_2_2</p>
+                            <div class="stage" id="stage_5">
+                                <a href="stages\5\index.html"></a>
+                                <div class="thumbnail"></div>
+                            </div>
+                        </li>
+                        <li>
+                            <p id="st2-3">Stage_2_3</p>
+                            <div class="stage" id="stage_6">
+                                <a href="stages\6\index.html"></a>
+                                <div class="thumbnail"></div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="lev3" id="levels">
+                    <p>Leve3</p>
+                    <ul>
+                        <li>
+                            <p id="st3-1">Stage_3_1</p>
+                            <div class="stage" id="stage_7">
+                                <a href="stages\7\index.html"></a>
+                                <div class="thumbnail"></div>
+                            </div>
+                        </li>
+                        <li>
+                            <p id="st3-2">Stage_3_2</p>
+                            <div class="stage" id="stage_8">
+                                <a href="stages\8\index.html"></a>
+                                <div class="thumbnail"></div>
+                            </div>
+                        </li>
+                        <li>
+                            <p id="st3-3">Stage_3_3</p>
+                            <div class="stage" id="stage_9">
+                                <a href="stages\9\index.html"></a>
+                                <div class="thumbnail"></div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <div class="stage" id="stage_4">
-                <a href="stages\4\index.html"></a>
-                <div class="thumbnail"></div>
-            </div>
-            <div class="stage" id="stage_5">
-                <a href="stages\5\index.html"></a>
-                <div class="thumbnail"></div>
-            </div>
-            <div class="stage" id="stage_6">
-                <a href="stages\6\index.html"></a>
-                <div class="thumbnail"></div>
-            </div>
-            <div class="stage" id="stage_7">
-                <a href="stages\7\index.html"></a>
-                <div class="thumbnail"></div>
-            </div>
-            <div class="stage" id="stage_8">
-                <a href="stages\8\index.html"></a>
-                <div class="thumbnail"></div>
-            </div>
-            <div class="stage" id="stage_9">
-                <a href="stages\9\index.html"></a>
-                <div class="thumbnail"></div>
-            </div>
-        </div>
+        </form>
     </body>
-
 </html>
