--- a/gamepage/index.html
+++ b/gamepage/index.html
@@ -33,21 +33,21 @@
                             <p id="st1-1">Stage_1_1</p>
                             <div class="stage" id="stage_1">
                                 <a href="stages\1\index.html"></a>
-                                <div class="thumbnail"></div>
+                                <div class="thumbnail" id="thum1"></div>
                             </div>
                         </li>
                         <li>
                             <p id="st1-2">Stage_1_2</p>
                             <div class="stage" id="stage_2">
                                 <a href="stages\2\index.html"></a>
-                                <div class="thumbnail"></div>
+                                <div class="thumbnail" id="thum2"></div>
                             </div>
                         </li>
                         <li>
                             <p id="st1-3">Stage_1_3</p>
                             <div class="stage" id="stage_3">
                                 <a href="stages\3\index.html"></a>
-                                <div class="thumbnail"></div>
+                                <div class="thumbnail" id="thum3"></div>
                             </div>
                         </li>
                     </ul>
@@ -59,21 +59,21 @@
                             <p id="st2-1">Stage_2_1</p>
                             <div class="stage" id="stage_4">
                                 <a href="stages\4\index.html"></a>
-                                <div class="thumbnail"></div>
+                                <div class="thumbnail" id="thum4"></div>
                             </div>
                         </li>
                         <li>
                             <p id="st2-2">Stage_2_2</p>
                             <div class="stage" id="stage_5">
                                 <a href="stages\5\index.html"></a>
-                                <div class="thumbnail"></div>
+                                <div class="thumbnail" id="thum5"></div>
                             </div>
                         </li>
                         <li>
                             <p id="st2-3">Stage_2_3</p>
                             <div class="stage" id="stage_6">
                                 <a href="stages\6\index.html"></a>
-                                <div class="thumbnail"></div>
+                                <div class="thumbnail" id="thum6"></div>
                             </div>
                         </li>
                     </ul>
@@ -85,21 +85,21 @@
                             <p id="st3-1">Stage_3_1</p>
                             <div class="stage" id="stage_7">
                                 <a href="stages\7\index.html"></a>
-                                <div class="thumbnail"></div>
+                                <div class="thumbnail" id="thum7"></div>
                             </div>
                         </li>
                         <li>
                             <p id="st3-2">Stage_3_2</p>
                             <div class="stage" id="stage_8">
                                 <a href="stages\8\index.html"></a>
-                                <div class="thumbnail"></div>
+                                <div class="thumbnail" id="thum8"></div>
                             </div>
                         </li>
                         <li>
                             <p id="st3-3">Stage_3_3</p>
                             <div class="stage" id="stage_9">
                                 <a href="stages\9\index.html"></a>
-                                <div class="thumbnail"></div>
+                                <div class="thumbnail" id="thum9"></div>
                             </div>
                         </li>
                     </ul>
