--- a/introduction/index.html
+++ b/introduction/index.html
@@ -25,18 +25,35 @@
                 <div class="TextMask"><div class="text">M E N U</div></div>
             </div>
             
+            <div class="" id="circle5">
+                <div class="planet" id="star"></div>
+                <img class="planet" id="planet_1" src="../images/Planetary_system/small_4.png" alt="">
+                <img class="planet" id="planet_2" src="../images/Planetary_system/big_2.png" alt="">
+                <img class="planet" id="planet_3" src="../images/Planetary_system/big_3.png" alt="">
+                <img class="planet" id="planet_4" src="../images/Planetary_system/big_1.png" alt="">
+                <img class="planet" id="planet_5" src="../images/Planetary_system/big_4.png" alt="">
+                <img class="planet" id="planet_6" src="../images/Planetary_system/small_2.png" alt="">
+            </div>
             <main class="container" id="js-container">
+                <div class="box1 dot"></div>
                 <div class="circle" id="circle1"></div>
                 <div class="circle" id="circle2"></div>
                 <div class="circle" id="circle3"></div>
                 <div class="circle" id="circle4"></div>
-                <div class="" id="circle5">
-                    <div class="" id="circle5-1"></div>
-                    <div class="" id="circle5-2"></div>
-                    <div class="" id="circle5-3"></div>
-                    <div class="" id="circle5-4"></div>
-                    <div class="" id="circle5-5"></div>
-                    <div class="" id="circle5-6"></div>
+                <div class="line1">
+                    <div class="block">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
                 </div>
                 <div class="line1">
                     <div class="block">
@@ -53,7 +70,6 @@
                         <span></span>
                     </div>
                 </div>
-                <div class="box1 dot"></div>
             </main>
         </form>
     </body>
