--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <meta http-equiv="X-UA-compatible" content="ie=Edge">
         <title>Device - home</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="icon" href="images/Device__icon/Device__svg_icon.svg">
+        <link rel="apple-touch-icon" href="images/Device__icon/Device__svg_icon.svg">
         <script src="script.js" defer></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </head>
@@ -80,4 +82,3 @@
         </form>
     </body>
 </html>
-
