--- a/gamepage/stages/1/index.html
+++ b/gamepage/stages/1/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-compatible" content="ie=Edge">
-        <title>Device - gamepage</title>
+        <title>Device - gamepage - 1</title>
         <link rel="stylesheet" href="style.css">
         <script src="script.js" defer></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -26,5 +26,9 @@
         <div class="content">
             <div class="stage" id="stage_1" href="stages/1/index.html"></div>
         </div> -->
+        <div id="tile">
+            
+            <div id="moveTile"></div>
+        </div>
     </body>
 </html>
