--- a/gamepage/index.html
+++ b/gamepage/index.html
@@ -6,8 +6,8 @@
         <meta http-equiv="X-UA-compatible" content="ie=Edge">
         <title>Device - gamepage</title>
         <link rel="stylesheet" href="style.css">
-        <script src="script.js" defer></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="script.js" defer></script>
     </head>
     <body>
         <form name="myGameSite">
@@ -34,6 +34,7 @@
                             <div class="stage" id="stage_1">
                                 <a href="stages\1\index.html"></a>
                                 <div class="thumbnail" id="thum1"></div>
+                                <p>title</p>
                             </div>
                         </li>
                         <li>
@@ -41,6 +42,7 @@
                             <div class="stage" id="stage_2">
                                 <a href="stages\2\index.html"></a>
                                 <div class="thumbnail" id="thum2"></div>
+                                <p>title</p>
                             </div>
                         </li>
                         <li>
@@ -48,6 +50,7 @@
                             <div class="stage" id="stage_3">
                                 <a href="stages\3\index.html"></a>
                                 <div class="thumbnail" id="thum3"></div>
+                                <p>title</p>
                             </div>
                         </li>
                     </ul>
@@ -60,6 +63,7 @@
                             <div class="stage" id="stage_4">
                                 <a href="stages\4\index.html"></a>
                                 <div class="thumbnail" id="thum4"></div>
+                                <p>title</p>
                             </div>
                         </li>
                         <li>
@@ -67,6 +71,7 @@
                             <div class="stage" id="stage_5">
                                 <a href="stages\5\index.html"></a>
                                 <div class="thumbnail" id="thum5"></div>
+                                <p>title</p>
                             </div>
                         </li>
                         <li>
@@ -74,6 +79,7 @@
                             <div class="stage" id="stage_6">
                                 <a href="stages\6\index.html"></a>
                                 <div class="thumbnail" id="thum6"></div>
+                                <p>title</p>
                             </div>
                         </li>
                     </ul>
@@ -86,6 +92,7 @@
                             <div class="stage" id="stage_7">
                                 <a href="stages\7\index.html"></a>
                                 <div class="thumbnail" id="thum7"></div>
+                                <p>title</p>
                             </div>
                         </li>
                         <li>
@@ -93,6 +100,7 @@
                             <div class="stage" id="stage_8">
                                 <a href="stages\8\index.html"></a>
                                 <div class="thumbnail" id="thum8"></div>
+                                <p>title</p>
                             </div>
                         </li>
                         <li>
@@ -100,6 +108,7 @@
                             <div class="stage" id="stage_9">
                                 <a href="stages\9\index.html"></a>
                                 <div class="thumbnail" id="thum9"></div>
+                                <p>title</p>
                             </div>
                         </li>
                     </ul>
