--- a/gamepage/index.html
+++ b/gamepage/index.html
@@ -26,89 +26,89 @@
             </div>
             
             <main class="container" id="js-container">
-                <div class="lev1" id="levels">
+                <div class="levels" id="lev1">
                     <p>Leve1</p>
                     <ul>
                         <li>
-                            <p id="st1-1">Stage_1_1</p>
+                            <p id="st1-1" class="stNumber">Stage_1_1</p>
                             <div class="stage" id="stage_1">
                                 <a href="stages\1\index.html"></a>
                                 <div class="thumbnail" id="thum1"></div>
-                                <p>title</p>
+                                <p>title 1</p>
                             </div>
                         </li>
                         <li>
-                            <p id="st1-2">Stage_1_2</p>
+                            <p id="st1-2" class="stNumber">Stage_1_2</p>
                             <div class="stage" id="stage_2">
                                 <a href="stages\2\index.html"></a>
                                 <div class="thumbnail" id="thum2"></div>
-                                <p>title</p>
+                                <p>title 2</p>
                             </div>
                         </li>
                         <li>
-                            <p id="st1-3">Stage_1_3</p>
+                            <p id="st1-3" class="stNumber">Stage_1_3</p>
                             <div class="stage" id="stage_3">
                                 <a href="stages\3\index.html"></a>
                                 <div class="thumbnail" id="thum3"></div>
-                                <p>title</p>
+                                <p>title 3</p>
                             </div>
                         </li>
                     </ul>
                 </div>
-                <div class="lev2" id="levels">
+                <div class="levels" id="lev2">
                     <p>Leve2</p>
                     <ul>
                         <li>
-                            <p id="st2-1">Stage_2_1</p>
+                            <p id="st2-1" class="stNumber">Stage_2_1</p>
                             <div class="stage" id="stage_4">
                                 <a href="stages\4\index.html"></a>
                                 <div class="thumbnail" id="thum4"></div>
-                                <p>title</p>
+                                <p>title 4</p>
                             </div>
                         </li>
                         <li>
-                            <p id="st2-2">Stage_2_2</p>
+                            <p id="st2-2" class="stNumber">Stage_2_2</p>
                             <div class="stage" id="stage_5">
                                 <a href="stages\5\index.html"></a>
                                 <div class="thumbnail" id="thum5"></div>
-                                <p>title</p>
+                                <p>title 5</p>
                             </div>
                         </li>
                         <li>
-                            <p id="st2-3">Stage_2_3</p>
+                            <p id="st2-3" class="stNumber">Stage_2_3</p>
                             <div class="stage" id="stage_6">
                                 <a href="stages\6\index.html"></a>
                                 <div class="thumbnail" id="thum6"></div>
-                                <p>title</p>
+                                <p>title 6</p>
                             </div>
                         </li>
                     </ul>
                 </div>
-                <div class="lev3" id="levels">
+                <div class="levels" id="lev3">
                     <p>Leve3</p>
                     <ul>
                         <li>
-                            <p id="st3-1">Stage_3_1</p>
+                            <p id="st3-1" class="stNumber">Stage_3_1</p>
                             <div class="stage" id="stage_7">
                                 <a href="stages\7\index.html"></a>
                                 <div class="thumbnail" id="thum7"></div>
-                                <p>title</p>
+                                <p>title 7</p>
                             </div>
                         </li>
                         <li>
-                            <p id="st3-2">Stage_3_2</p>
+                            <p id="st3-2" class="stNumber">Stage_3_2</p>
                             <div class="stage" id="stage_8">
                                 <a href="stages\8\index.html"></a>
                                 <div class="thumbnail" id="thum8"></div>
-                                <p>title</p>
+                                <p>title 8</p>
                             </div>
                         </li>
                         <li>
-                            <p id="st3-3">Stage_3_3</p>
+                            <p id="st3-3" class="stNumber">Stage_3_3</p>
                             <div class="stage" id="stage_9">
                                 <a href="stages\9\index.html"></a>
                                 <div class="thumbnail" id="thum9"></div>
-                                <p>title</p>
+                                <p>title 9</p>
                             </div>
                         </li>
                     </ul>
